[PatchRelease] Prepare 2024 August Patch Release (#41630)
* Updated list of libraries to patch in patch-release.yml

* Reset sources for azure-communication-messages to the release version 1.0.5.

* Prepare azure-communication-messages for 1.0.6 patch release.

* Reset sources for azure-search-documents to the release version 11.7.0.

* Prepare azure-search-documents for 11.7.1 patch release.

* Reset sources for azure-digitaltwins-core to the release version 1.3.22.

* Prepare azure-digitaltwins-core for 1.3.23 patch release.

* Reset sources for azure-developer-devcenter to the release version 1.0.2.

* Prepare azure-developer-devcenter for 1.0.3 patch release.

* Reset sources for azure-communication-callautomation to the release version 1.2.3.

* Prepare azure-communication-callautomation for 1.2.4 patch release.

* Reset sources for azure-storage-blob-batch to the release version 12.23.0.

* Prepare azure-storage-blob-batch for 12.23.1 patch release.

* Reset sources for azure-storage-blob-cryptography to the release version 12.26.0.

* Prepare azure-storage-blob-cryptography for 12.26.1 patch release.

* Reset sources for azure-security-attestation to the release version 1.1.26.

* Prepare azure-security-attestation for 1.1.27 patch release.

* Reset sources for azure-communication-sms to the release version 1.1.26.

* Prepare azure-communication-sms for 1.1.27 patch release.

* Reset sources for azure-security-confidentialledger to the release version 1.0.22.

* Prepare azure-security-confidentialledger for 1.0.23 patch release.

* Reset sources for azure-data-tables to the release version 12.4.3.

* Prepare azure-data-tables for 12.4.4 patch release.

* Reset sources for azure-ai-textanalytics to the release version 5.5.0.

* Prepare azure-ai-textanalytics for 5.5.1 patch release.

* Reset sources for azure-containers-containerregistry to the release version 1.2.10.

* Prepare azure-containers-containerregi