@@ -11,7 +11,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-iot-deviceupdate</artifactId>
-  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure:azure-iot-deviceupdate;current} -->
+  <version>1.0.21</version> <!-- {x-version-update;com.azure:azure-iot-deviceupdate;current} -->
   <name>Microsoft Device Update for IoT Hub client library for Java</name>
   <description>This package contains Microsoft Device Update for IoT Hub client library.</description>
 
@@ -29,10 +29,6 @@
   <properties>
     <jacoco.min.linecoverage>0.25</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.1</jacoco.min.branchcoverage>
-    <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
-    <javaModulesSurefireArgLine>
-      --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-    </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
